--- a/crash.html
+++ b/crash.html
@@ -19,10 +19,11 @@
       <div class="row col-sm-12">
         <nav class="col-sm-2">          
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"> <a href="crash.html"> <span class="glyphicon glyphicon-home"></span> Accueil </a> </li>
+           <li class="active"> <a href="crash.html"> <span class="btn btn-info"></span> Accueil </a> </li>
             
-            <li> <a href="score.html"> <span class="glyphicon glyphicon-facetime-video"></span> Score </a> </li>
-            <li> <a href="boutique.html"> <span class="glyphicon glyphicon-headphones"></span> Boutique </a> </li>
+            <li> <a href="score.html"> <span class="btn btn-primary"></span> Score </a> </li>
+              <li> <a href="score.html"> <span class="btn btn-primary"></span> Jeu </a> </li>
+            <li> <a href="#"> <span class="btn btn-warning"></span> Règles </a> </li>
           </ul>
         </nav>
         <section class="col-sm-10">
@@ -31,27 +32,9 @@
               <h3 class="panel-title">Crash Fox !</h3>
             </div>
             <div class="panel-body">
-              <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
-sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, 
-qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore 
-magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut 
-aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, 
-vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-              <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
-voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro 
-quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit 
-laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil 
-molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-              <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
-voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro 
-quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit 
-laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam 
-nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+                <center><img src="logo2.png" class="logo"></center>
+              <p>"Crash Fox est un jeu de plateforme ouvert à tous les joueurs : du plus novice au plus expérimentés. Il n'y a qu'une seule règle : Ramasser toutes les pommes pour avancer ! Et oui ! J'oubliais : Ramassez ces pommes le plus vite possible puisque tout est chronométré ! Aller je vous souhaite bonne chance ! Vous en aurez bien besoin xD"</p>
+                
             </div>
           </div>
         </section>
