--- a/jeu.html
+++ b/jeu.html
@@ -1,8 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
 <head>
     <meta charset="utf-8">
     <link href="bootstrap.css" rel="stylesheet">
@@ -32,8 +29,7 @@
                     <h3 class="panel-title">Crash Fox !</h3>
                 </div>
                 <div class="panel-body">
-                    <script src="phaser/build/phaser.min.js"></script>
-                    <script src="js/starstruck.js"></script>
+                    <div id="phaser-example"></div>
                 </div>
             </div>
         </section>
@@ -46,5 +42,6 @@
 </div>
 </body>
 </html>
-
+<script src="phaser/build/phaser.min.js"></script>
+<script src="js/starstruck.js"></script>
 
