--- a/crash.html
+++ b/crash.html
@@ -41,7 +41,7 @@
       </div>
       <footer class="row col-sm-12">
         <div class="panel panel-body">
-          <p>Tous droits réservés par Sousou...</p>
+          <p>Tous droits réservés par Retrolution</p>
         </div>
       </footer>
     </div>
