--- a/regles.html
+++ b/regles.html
@@ -13,7 +13,7 @@
     <div class="container">
       <header class="row col-sm-12">
         <div class="page-header">
-          <h1>RetroGaming<img src="logo.png" class="pull-right"></h1>
+          <h1>Retrolution<img src="logo.png" class="pull-right"></h1>
         </div>
       </header>
       <div class="row col-sm-12">
@@ -38,7 +38,7 @@
       </div>
       <footer class="row col-sm-12">
         <div class="panel panel-body">
-          <p>Tous droits réservés par Sousou</p>
+          <p>Tous droits réservés par Retrolution</p>
         </div>
       </footer>
     </div>
